0.1.1 beta, Feb 27, 2008
=========================
 - Added Mootools release.
 - Renamed private function fireSelectedEvent to fireSelectEvent.
 - Added json data example.
 - Improved mouse tracking.
 - Added options.grid.verticalLines (hide vertical grid lines when set to false).
 - Added options.grid.horizontalLines (hide horizontal grid lines when set to false).

0.1.0 alpha, Feb 27, 2008
=========================
 - First release Prototype.