@@ -1,11 +1,15 @@
 0.1.1 beta, Feb 27, 2008
 =========================
  - Added Mootools release.
- - Renamed private function fireSelectedEvent to fireSelectEvent.
  - Added json data example.
  - Improved mouse tracking.
  - Added options.grid.verticalLines (hide vertical grid lines when set to false).
  - Added options.grid.horizontalLines (hide horizontal grid lines when set to false).
+ - Added options.grid.outlineWidth (width of the grid outline/border in pixels)
+ - Added options.bars.fillColor (opacity of the fill color, set to 1 for a solid fill, 0 hides the fill)
+ - Added options.lines.fillColor (opacity of the fill color, set to 1 for a solid fill, 0 hides the fill)
+ - Fixed small bug in merge method (used by Prototype version for merging options with default options)
+ - Added options.bars.horizontal (set to true for horizontal bars, false = vertical)
 
 0.1.0 alpha, Feb 27, 2008
 =========================
